--- a/src/app/pages/counters/counters.page.scss
+++ b/src/app/pages/counters/counters.page.scss
@@ -17,3 +17,8 @@
       margin-right: 10px;
     }
   }
+
+  .updated-counter {
+    //color primary
+    background-color: var(--ion-color-secondary);
+  }
