--- a/src/global.scss
+++ b/src/global.scss
@@ -40,16 +40,26 @@ html,body {
 .validation-errors {
   //child error
   .error-message {
-    color: red;
+    color: var(--ion-color-danger);
   }
 }
 
-ion-toolbar {
-  --background: var(--ion-color-toolbar-background);
-  --color: var(--ion-color-toolbar-color);
-}
+@if var(--custom-is-dark-mode-on)  {
+  ion-toolbar {
+      background-color: var(--ion-color-toolbar-background);
+      color: var(--ion-color-toolbar-color);
+  }
 
-ion-button {
-  --background: var(--ion-color-button-background);
-  --color: var(--ion-color-button-color);
+  ion-button {
+      --background: var(--ion-color-button-background);
+      --color: var(--ion-color-button-color);
+  }
+  
+  ion-toggle {
+    --background: var(--ion-color-toggle-background);
+    --background-checked: var(--ion-color-toggle-background-checked);
+    --handle-background: var(--ion-color-toggle-handle-background);
+    --handle-background-checked: var(--ion-color-toggle-handle-background-checked);
+  }
+
 }
