--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -58,7 +58,7 @@
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <ion-text>End time today: {{countersCalculation.endTimeToday | date:'HH:mm:'}}</ion-text>
+                  <ion-text>End time today: {{countersCalculation.endTimeToday | date:'HH:mm'}}</ion-text>
                 </ion-col>
               </ion-row>
               <ion-row>
