--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -171,6 +171,8 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-toggle-background-checked : #ffffff;
     --ion-color-toggle-handle-background : #ffffff;
     --ion-color-toggle-handle-background-checked : #555555;
+
+    --ion-card-color: #ffffff;
     
 }
 
