--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -159,6 +159,8 @@ http://ionicframework.com/docs/theming/ */
     //custom
     --ion-color-toolbar-background: #121212;
     --ion-color-toolbar-color: #ffffff;
+
+    //button
     --ion-color-button-background: #555555;;
     --ion-color-button-color: #ffffff;
     
