--- a/src/global.scss
+++ b/src/global.scss
@@ -44,22 +44,35 @@ html,body {
   }
 }
 
-@if var(--custom-is-dark-mode-on)  {
+ion-toolbar {
+  --background: var(--ion-color-primary);
+  --color: #ffffff;
+}
+
+body.dark {
   ion-toolbar {
-      background-color: var(--ion-color-toolbar-background);
-      color: var(--ion-color-toolbar-color);
+    --background: var(--ion-color-toolbar-background);
+    color: var(--ion-color-toolbar-color);
   }
 
   ion-button {
-      --background: var(--ion-color-button-background);
-      --color: var(--ion-color-button-color);
+    --background: var(--ion-color-button-background);
+    --color: var(--ion-color-button-color);
   }
-  
+
   ion-toggle {
     --background: var(--ion-color-toggle-background);
     --background-checked: var(--ion-color-toggle-background-checked);
     --handle-background: var(--ion-color-toggle-handle-background);
     --handle-background-checked: var(--ion-color-toggle-handle-background-checked);
   }
-
 }
+
+
+
+
+
+
+
+
+
