--- a/src/app/components/flipper/flipper.component.html
+++ b/src/app/components/flipper/flipper.component.html
@@ -1,12 +1,8 @@
-<div class="flippy-container ">
-  <div class="flippy-cardContainer-wrapper horizontal">
-    <div class="flippy-cardContainer" [class.isActive]="data">
-      <div class="flippy-card flippy-front {{customFrontCss}}" style="transition-duration: 0.6s;">
-        <ng-content select="[front]"></ng-content>
-      </div>
-      <div class="flippy-card flippy-back {{customBackCss}}" style="transition-duration: 0.6s;">
-        <ng-content select="[back]"></ng-content>
-      </div>
-    </div>
+<div class="flippy-cardContainer" [class.isActive]="data">
+  <div class="flippy-front {{customFrontCss}}" style="transition-duration: 0.6s;">
+    <ng-content select="[front]"></ng-content>
+  </div>
+  <div class="flippy-back {{customBackCss}}" style="transition-duration: 0.6s;">
+    <ng-content select="[back]"></ng-content>
   </div>
 </div>
