--- a/src/app/components/loading-bar/loading-bar.component.html
+++ b/src/app/components/loading-bar/loading-bar.component.html
@@ -1,4 +1,3 @@
-<!-- 
-  set loading width after 60%
- -->
-<div class="Loading"></div>
+<div class="loading">
+  <div class="loading-fill" [ngStyle]="{'width': getWidthPercentage()}"></div>
+</div>
