--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -35,7 +35,7 @@
       <ion-list>
         <!-- The reorder gesture is disabled by default, enable it to drag and drop items -->
         <!-- Casting $event to $any is a temporary fix for this bug https://github.com/ionic-team/ionic-framework/issues/24245 -->
-        <ion-reorder-group [disabled]="true" (ionItemReorder)="handleReorder($any($event))">
+        <ion-reorder-group [disabled]="false" (ionItemReorder)="handleReorder($any($event))">
           <ng-container *ngFor="let mission of filteredMissions; let i = index;">
             <ion-item>
               <app-flipper [customFrontCss]="mission.currentTotalAmount >= mission.targtAmount ? 'card-completed' : ''"
