--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -48,32 +48,22 @@
       <ion-list>
         <!-- The reorder gesture is disabled by default, enable it to drag and drop items -->
         <!-- Casting $event to $any is a temporary fix for this bug https://github.com/ionic-team/ionic-framework/issues/24245 -->
-        <ion-reorder-group [disabled]="false" (ionItemReorder)="handleReorder($any($event))">
+        <ion-reorder-group [disabled]="!isReorderEnabled" (ionItemReorder)="handleReorder($any($event))">
           <ng-container *ngFor="let mission of filteredMissions; let i = index;">
             <ion-item>
-              <app-flipper [customFrontCss]="mission.currentTotalAmount >= mission.targtAmount ? 'card-completed' : ''"
-                style="width: 100%;">
-                <div front style="display: flex;">
-                  <ion-label [routerLink]="['/counters', mission.id]">
-                    {{mission.currentTotalAmount}}/{{mission.targetAmount}} {{mission.name}}
-                  </ion-label>
-                  <ion-label [routerLink]="['/counters', mission.id]">
-                    {{mission.percentage + '%'}}
-                  </ion-label>
-                  <ion-label (click)="onFlip(i)">
-                    <ion-icon name="settings-outline"></ion-icon>
+              <app-flipper [customFrontCss]="{'card-completed': mission.isCompleted()}" style="width: 100%;">
+                <div front>
+                  <ion-label class="labelx">
+                    <div [routerLink]="['/counters', mission.id]">
+                      {{mission.currentTotalAmount}}/{{mission.targetAmount}} {{mission.name}}</div>
+                    <div> {{mission.getPercentage()}}</div>
+                    <div (click)="onFlip(i)" *ngIf="!isReorderEnabled">
+                      <ion-icon name="settings-outline"></ion-icon>
+                    </div>
                   </ion-label>
                 </div>
                 <div back style="display: flex;">
-                  <ion-label [routerLink]="['/counters', mission.id]">
-                    {{mission.currentTotalAmount}}/{{mission.targetAmount}} {{mission.name}}
-                  </ion-label>
-                  <ion-label [routerLink]="['/counters', mission.id]">
-                    {{mission.percentage + '%'}}
-                  </ion-label>
-                  <ion-label (click)="onFlip(i)">
-                    <ion-icon name="settings-outline"></ion-icon>
-                  </ion-label>
+                  
                 </div>
               </app-flipper>
               <ion-reorder slot="end"></ion-reorder>
@@ -87,7 +77,7 @@
         <div [routerLink]="['/counters', mission.id]">
           <p class="ion-margin">
             {{mission.name}} {{mission.currentTotalAmount}}/{{mission.targetAmount}}
-            <ng-container *ngIf="mission.currentTotalAmount >= mission.targetAmount">
+            <ng-container *ngIf="mission.isCompleted()">
               <ion-icon class="icon" name="checkmark-circle-outline"></ion-icon>
             </ng-container>
           </p>
