--- a/src/app/pages/missions/missions.page.scss
+++ b/src/app/pages/missions/missions.page.scss
@@ -5,6 +5,10 @@
   vertical-align: middle;
  }
 
+ .marginx {
+  margin: 10px;
+ }
+
 .labelx {
   justify-content: space-between;
   display: flex;
@@ -14,25 +18,16 @@
 //first child
 .labelx > *:first-child {
   width: 60%;
-  font-size: 5vw;
 }
 
 //second child
 .labelx > *:nth-child(2) {
-  width: 30%;
-  font-size: 5vw;
+  width: 40%;
   text-align: left;
-}
-
-//third child
-.labelx > *:nth-child(3) {
-  width: 10%;
-  font-size: 5vw;
-  text-align: right;
 }
 
 
 ion-item {
-  --padding-start: 0px;
-  --inner-padding-end: 0px;
+  --padding-start: 5px;
+  --inner-padding-end: 5px;
 }
