--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -50,22 +50,18 @@
         <!-- Casting $event to $any is a temporary fix for this bug https://github.com/ionic-team/ionic-framework/issues/24245 -->
         <ion-reorder-group [disabled]="!isReorderEnabled" (ionItemReorder)="handleReorder($any($event))">
           <ng-container *ngFor="let mission of filteredMissions; let i = index;">
-            <ion-item>
-              <app-flipper [customFrontCss]="{'card-completed': mission.isCompleted()}" style="width: 100%;">
-                <div front>
-                  <ion-label class="labelx">
-                    <div [routerLink]="['/counters', mission.id]">
-                      {{mission.currentTotalAmount}}/{{mission.targetAmount}} {{mission.name}}</div>
-                    <div> {{mission.getPercentage()}}</div>
-                    <div (click)="onFlip(i)" *ngIf="!isReorderEnabled">
-                      <ion-icon name="settings-outline"></ion-icon>
-                    </div>
-                  </ion-label>
-                </div>
-                <div back style="display: flex;">
-                  
-                </div>
-              </app-flipper>
+            <ion-item lines="none">
+              <div class="marginx">
+                <div>{{mission.name}}</div>
+                <ion-label>
+                  <small [routerLink]="['/counters', mission.id]">
+                    {{mission.currentTotalAmount}}/{{mission.targetAmount}}</small>
+                  <small> {{mission.getPercentage()}}</small>
+                </ion-label>
+              </div>
+              <div (click)="onFlip(i)" *ngIf="!isReorderEnabled" slot="end" class="reorder-icon md hydrated">
+                <ion-icon name="settings-outline"></ion-icon>
+              </div>
               <ion-reorder slot="end"></ion-reorder>
             </ion-item>
           </ng-container>
