--- a/src/app/pages/missions/missions.page.scss
+++ b/src/app/pages/missions/missions.page.scss
@@ -1,33 +1,49 @@
-.icon {
-  display: inline-block;
-  font-size: 30px;
-  color: var(--ion-color-success,#3dbd23 );
-  vertical-align: middle;
- }
-
- .marginx {
-  margin: 10px;
- }
-
-.labelx {
-  justify-content: space-between;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-//first child
-.labelx > *:first-child {
-  width: 60%;
+.flip-container {
+  perspective: 1000px;
 }
 
-//second child
-.labelx > *:nth-child(2) {
-  width: 40%;
-  text-align: left;
+.flipper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
+.front,
+.back {
+  position: relative;
+  backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
 
-ion-item {
-  --padding-start: 5px;
-  --inner-padding-end: 5px;
+.front > div,
+.back > div {
+  position: absolute;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+
+.front {
+  position: absolute;
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+.flip {
+  transform: rotateY(-180deg);
+}
+
+.flip .front > div {
+  transform: rotateY(-180deg);
+}
+
+.flip .back > div {
+  transform: rotateY(0deg);
 }
