--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,7 +31,7 @@ http://ionicframework.com/docs/theming/ */
   /** success **/
   --ion-color-success: #10dc60;
   --ion-color-success-rgb: 16, 220, 96;
-  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast: #000000;
   --ion-color-success-contrast-rgb: 255, 255, 255;
   --ion-color-success-shade: #0ec254;
   --ion-color-success-tint: #28e070;
